<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/configuracion" android:title="@string/configuracion"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="always">

    </item>

    <item android:id="@id/acercaDe"
        android:title="@string/acerca_de"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_info_details">

    </item>
    <item
        android:id="@+id/salir"
        android:title="@string/salir"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"/>
</menu>